# ResSimpy

./: .gitignore  .readthedocs.yaml  LICENSE.MD  README.md  README.rst  pyproject.toml  run_all_checks.sh
.config/: mypy
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/prepare-poetry/: action.yml
.github/workflows/: SAST-scan.yml  SCA-scan.yml  ci-publish.yml  ci-tests.yml  codeql-analysis.yml
ResSimpy/: Aquifer.py  AquiferMethod.py  AquiferMethods.py  Completion.py  Constraint.py  Constraints.py  DataObjectMixin.py  DynamicProperty.py  EquilMethod.py  EquilMethods.py  Equilibration.py  File.py  FileBase.py  Gaslift.py  GasliftMethod.py  GasliftMethods.py  Grid.py  GridArrayDefinition.py  GridArrayFunction.py  Grids.py  Hydraulics.py  HydraulicsMethod.py  HydraulicsMethods.py  ISODateTime.py  LGR.py  LGRs.py  Network.py  NetworkList.py  NetworkLists.py  NetworkObject.py  NexusSimulator.py  Node.py  NodeConnection.py  NodeConnections.py  Nodes.py  OperationsMixin.py  PVT.py  PVTMethod.py  PVTMethods.py  RelPerm.py  (+37 more)
ResSimpy/BaseClasses/: Aquifer.py  Completion.py  Constraint.py  Constraints.py  DataObjectMixin.py  DynamicProperty.py  Equilibration.py  File.py  FileBase.py  Grid.py  Grids.py  Network.py  Node.py  NodeConnection.py  NodeConnections.py  Nodes.py  OperationsMixin.py  PVT.py  RelPermEndPoint.py  Rock.py  Separator.py  Simulator.py  Target.py  Targets.py  Well.py  WellConnection.py  WellConnections.py  Wellbore.py  Wellbores.py  Wellhead.py  Wellheads.py  Wells.py  __init__.py
ResSimpy/DataModelBaseClasses/: Aquifer.py  Completion.py  Constraint.py  DataObjectMixin.py  Drill.py  DrillSite.py  DynamicProperty.py  DynamicPropertyContainer.py  Equilibration.py  Ftrans.py  Gaslift.py  Grid.py  GridArrayDefinition.py  GuideRate.py  LGR.py  Multir.py  Network.py  NetworkList.py  NetworkObject.py  Node.py  NodeConnection.py  OperationsMixin.py  Over.py  PVT.py  RelPerm.py  Reporting.py  Rock.py  Separator.py  Simulator.py  SolverParameter.py  Target.py  Valve.py  Water.py  Well.py  WellConnection.py  Wellbore.py  Wellhead.py  __init__.py  output_request.py
ResSimpy/Enums/: ConstraintEnums.py  FluidTypeEnums.py  FrequencyEnum.py  GridFunctionTypes.py  HowEnum.py  OutputType.py  PenetrationDirectionEnum.py  TimeSteppingMethodEnum.py  UnitsEnum.py  WellTypeEnum.py  __init__.py
ResSimpy/FileOperations/: File.py  FileBase.py  __init__.py  file_operations.py  simulator_constants.py
ResSimpy/GenericContainerClasses/: Constraints.py  DrillSites.py  Drills.py  Grids.py  GuideRates.py  Hydraulics.py  LGRs.py  NetworkLists.py  NodeConnections.py  Nodes.py  OperationsMixin.py  SolverParameters.py  Targets.py  WellConnections.py  Wellbores.py  Wellheads.py  Wells.py  __init__.py
ResSimpy/Nexus/: NexusAquiferMethods.py  NexusEquilMethods.py  NexusGasliftMethods.py  NexusGrids.py  NexusHydraulicsMethods.py  NexusIPRMethods.py  NexusNetwork.py  NexusPVTMethods.py  NexusRelPermMethods.py  NexusReporting.py  NexusRockMethods.py  NexusSeparatorMethods.py  NexusSimulator.py  NexusSimulator.py.orig  NexusSolverParameters.py  NexusValveMethods.py  NexusWaterMethods.py  NexusWells.py  NexusWells.py.orig  __init__.py  array_function_operations.py  constants.py  load_wells.py  logfile_operations.py  nexus_add_new_object_to_file.py  nexus_collect_tables.py  nexus_constants.py  nexus_constraint_operations.py  nexus_file_operations.py  nexus_file_operations.py.orig  nexus_keywords.py  nexus_load_faults.py  nexus_load_list_table.py  nexus_load_well_list.py  nexus_model_file_generator.py  nexus_modify_object_in_file.py  nexus_remove_object_from_file.py  rel_perm_operations.py  runcontrol_operations.py  structured_grid_operations.py
ResSimpy/Nexus/DataModels/: FcsConfig.py  FcsFile.py  IPRTable.py  IPRTables.py  NexusAquiferMethod.py  NexusCompletion.py  NexusEquil.py  NexusEquilMethod.py  NexusFile.py  NexusGasliftMethod.py  NexusHydraulicsMethod.py  NexusIPRMethod.py  NexusOptions.py  (+19 more)
ResSimpy/OpenGoSim/: OpenGoSimSimulator.py  OpenGoSimWells.py  __init__.py
ResSimpy/Time/: ISODateTime.py  __init__.py
ResSimpy/Units/: AttributeMapping.py  Units.py  __init__.py  convert_units.py
ResSimpy/Utils/: __init__.py  dynamic_method_manipulations.py  factory_methods.py  general_utilities.py  generic_repr.py  grid_filtering_functions.py  invert_nexus_map.py  obj_to_dataframe.py  obj_to_table_string.py  property_dict_to_params.py  to_dict_generic.py
docs/: CONTRIBUTING.rst  conf.py  getting-started.rst  getting_started.rst  index.rst  installation.rst
tests/: __init__.py  conftest.py  multifile_mocker.py  test_grid_array_definition.py  test_grid_filtering.py  test_module_level_imports.py  test_operations_mixin.py  test_utils.py  utility_for_tests.py
tests/FileOperations/: conftest.py  test_file_methods.py  test_file_operations.py  test_generic_file_operations.py
tests/Nexus/: conftest.py  test_fcs_file.py  test_iso_date_properties.py  test_load_wells.py  test_modify_nexus_grid.py  test_multiple_date_formats.py  test_nexus_aquifer_class.py  test_nexus_array_functions.py  test_nexus_array_functions_class.py  test_nexus_equil_class.py  test_nexus_file_class.py  test_nexus_file_operations.py  test_nexus_file_operations.py.orig  test_nexus_gaslift_class.py  test_nexus_grid_ftrans.py  test_nexus_grid_function.py  test_nexus_grid_multir.py  test_nexus_grid_over.py  test_nexus_grid_tover.py  test_nexus_hydraulics_class.py  test_nexus_log_file_operations.py  test_nexus_pvt_class.py  test_nexus_relpm_class.py  test_nexus_rock_class.py  test_nexus_separator_class.py  test_nexus_stations.py  test_nexus_tolpv.py  test_nexus_valve_class.py  test_nexus_water_class.py  test_nexus_well.py  test_nexus_welllist.py  test_nexus_wellmod.py  test_nexus_write_file.py  test_nexus_write_out_new_network.py  test_project_init.py
tests/OpenGoSim/: test_load_ogs_model.py  test_load_wells.py  test_well_info.py
tests/Units/: test_unit_conversion.py  test_unit_mappings.py  test_unit_system_enum_to_variable.py
useful_scripts/: attribute_map_to_props.py  getter_setter_creator.py
(+176 files in other folders)
