[tool.poetry]
name = "ResSimpy"
version = "0.0.0" # Set at build time
description = "A Python library for working with Reservoir Simulator Models."
authors = ["BP"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["ResSimpy", "Reservoir Engineering"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Filesystems",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
packages = [
    { include = "ResSimpy" } # Needed because the default build command ignores capital letters
]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
resqpy = "^4.9"
numpy = "^1.24"
pandas = "^1.5"
typing-extensions = "^4.7"

[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.9"
pytest = "^7.1"
coverage = "^6.5"
flake8 = "^6"
mypy = "^1.2"
pycodestyle = "^2.9.1"
pytest-cov = "^4.0.0"
ruff = "^0.0.270"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance) }}
    {%- endif -%}
"""

[tool.poetry-dynamic-versioning.substitution]
files = ["resqpy/__init__.py"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff]
line-length = 120
# Rule codes for ruff can be found at: https://beta.ruff.rs/docs/rules/
select = ["E", "F", "W", "C90", "N",  "UP", "YTT", "ANN", "S", "BLE", "D", "PLE", "PLW", "RUF", "BLE", "ARG", "I",
    "COM", "C4", "PIE", "T20", "PYI", "TID", "INT", "ERA", "PD", "FLY", "NPY"] # To add later: PL, PLR
ignore = ["UP007",  "ANN101", "N999", "UP035", "S105", "N802", "S106", "S107", "UP015", "ANN401", "ANN102", "D202",
    "D105", "D203", "D213", "RUF010", "I001", "B028", "COM812", "PD901",
    # To fix later:
    "ANN001", # Types
   "ANN201", # Types
   "ANN202", # Types
    "C901", # Complexity
    "D102", "D100", "D103", "D107", "D101", "D205", "D401", "D417", "D104", "D106", # Docstrings
    "FA100", # TODO need to remove references to Union, Optional, capital lettered typing (e.g. List)
             # from typings module.
    ]
exclude = ["./tests"]

[tool.ruff.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
autoclasstoc = "*"